# agentic-rag

./: README.md  docker-compose.yaml
api/: Dockerfile  main.py  pyproject.toml
api/agentic_rag/api/: documents.py  embedding.py  question.py
api/agentic_rag/models/: schemas.py
api/agentic_rag/services/: document_service.py  embedding_service.py  ocr_service.py  temporary_file_service.py
frontend/: Dockerfile  app.py  pyproject.toml
